--- a/Epicode HTML esercizio pratico giorno 1/index.html
+++ b/Epicode HTML esercizio pratico giorno 1/index.html
@@ -1,61 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Primo esercizio pratico HTML" />
-    <title>Cosa sapere su di me</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Immagine di Sfondo</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0; /* Colore di sfondo per vedere meglio il bordo */
+        }
+        .contenitore {
+            width: 450px;
+            height: 100vh; /* Puoi cambiare questa altezza come preferisci */
+            border: 1px solid black;
+            background-image: url('../img/sfondo.png');
+            background-size: cover; /* Adatta l'immagine al contenitore */
+            background-repeat: no-repeat; /* Evita la ripetizione dell'immagine */
+            background-position: center; /* Posiziona l'immagine al centro */
+        }
+    </style>
 </head>
-<a href="#Copyright Elijon Laska" > Scorri giù</a>
 <body>
-    <h1> Elijon Laska </h1>
-    <h2> <address> laskaelijon95@gmail.com </address> </h2>
-    <main>
- <a href="#"><img src="foto.profilo.elijon..jpg" alt="Una foto di me" /></a>
-
-
-    <p>Sono un ragazzo di ventinove anni, sposato e con un bellissimo bambino di due. Sono molto appassionato di ristorazione e informatica, la quale la prima è il mio lavoro attuale invece la seconda con tanta voglia di mettersi in gioco, duro studio e autodisciplina spero ne diventi il mio futuro. </p>
-    <p> Come la maggior parte dei ragazzi in gioventù i miei hobby erano gli sport, i quali ne ho praticato tantissimi, dalla pallavolo al basket in giovanissima età a sport un pò piu fisici come rugby e Arti Marziali Miste da più grandicello. Anche se una volta a casa la mia più grande passione era propri il computer che mi accompagnava sino alla tarda notte.</p> 
-
-<a href="https://github.com/Elijon-Laska"  title="il mio profilo GitHub" target="_blank"> Profilo GitHub </a>
-
-<p>Sono diplomato al <a href="#">ITT Ettore Majorana di Milazzo </a>e con varie specializazione e attestati in ristorazione <a Computer href="#"></a></p>
-
-<div>
-    <h4> Formazione</h4>
-    <ul>Le mie competenze
-    <li>Diploma Chimica e Materiali</li>
-    <li>Corso da Somelier AIS</li>
-    <li>Food Marketing Mastery</li>
-</ul>
-<h4>Formazione da raggiungere</h4>
-<ol>Competenze da acquisire
-    <li>Imparare tutto sul Front end </li>
-    <li>Imparare tutto sul Back-end</li>
-    <li>Padroneggiare Java Script</li>
-</ol>
-</div>
-</main>
-<section>
-<table border="1">
-<tr></tr>
-    <td>abc</td>
-</tr>
-<tr>
-    <td>abc</td>
-</tr>
-<tr>
-    <td>abc</td>
-    </tr>
-    
-
-
-</table>
-</section>
-
-<table></style> </head> <body> <h1>Le Mie Competenze</h1> <table> <tr> <th>Competenza</th> <th>Livello</th> </tr> <tr> <td>HTML</td> <td>Basso</td> </tr> <tr> <td>CSS</td> <td>Basso</td> </tr> <tr> <td>JavaScript</td> <td>Basso</td> </tr> <tr> <td>Python</td> <td>Basso</td> </tr> </table> </body> </html></table>
-
-<footer id="Copyright Elijon Laska"> &copy;Copyright Elijon Laska </footer>
-
+    <div class="contenitore"></div>
 </body>
 </html>
